trying to fix alignment through css

--- a/style.css
+++ b/style.css
@@ -21,3 +21,14 @@ img {
   .dropdown:hover .dropdown-content {
     display: block;
   }
+  
+  .navbar-btn {
+    .navbar-vertical-align(@input-height-base);
+  
+    &.btn-sm {
+      .navbar-vertical-align(@input-height-small);
+    }
+    &.btn-xs {
+      .navbar-vertical-align(22);
+    }
+  }
